--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
               colors: {
                 clifford: '#da373d',
                 'nav-bg':'#FFF9F4',
-                'btn-bg':'#FFDC26'
+                'btn-bg':'#FFDC26',
+                'card-bg':'#F9DF8A'
               }
             }
           }
@@ -37,7 +38,7 @@
 </head>
 <body class="adlam-display-regular">
     <!--header-->
-    <header>
+    <header class="mb-32">
        <!--navbar-->
        <nav class="bg-nav-bg sora-font">
         <!--nav-container-->
@@ -90,7 +91,64 @@
          </div> 
     </header>
     <!--main-->
-    <main>
+    <main class="space-y-32">
+      <!-- Browse By Catagories -->
+       <section class="max-w-7xl mx-auto px-4 lg:px-0">
+          <h1 class="text-4xl mb-10">Browse By Catagories</h1>
+          <!-- parent -->
+
+           <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 lg:gap-6 ">
+             <!-- child-1 -->
+              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+                 <!-- img-holder -->
+                  <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                    <img src="c1-assets/dog-cartoon.png" alt=""> </div>
+                 <h4 class="mb-3  text-xl">Dog</h4>
+                 <p class="sora-font ">3 items</p>
+              </div>
+              <!-- child-2 -->
+              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+                <!-- img-holder -->
+                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                   <img src="c1-assets/fish-cartoon.png" alt=""> </div>
+                <h4 class="mb-3  text-xl">Fish</h4>
+                <p class="sora-font ">3 items</p>
+             </div>
+              <!-- child-3 -->
+              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+                <!-- img-holder -->
+                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                   <img src="c1-assets/cat-cartoon.png" alt=""> </div>
+                <h4 class="mb-3  text-xl">Cat</h4>
+                <p class="sora-font ">3 items</p>
+             </div>
+              <!-- child-4 -->
+              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+                <!-- img-holder -->
+                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                   <img src="c1-assets/bird-cartoon.png" alt=""> </div>
+                <h4 class="mb-3  text-xl">Birds</h4>
+                <p class="sora-font ">3 items</p>
+             </div>
+              <!-- child-5 -->
+              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+                <!-- img-holder -->
+                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                   <img src="c1-assets/mouse-cartoon.png" alt=""> </div>
+                <h4 class="mb-3  text-xl">Small pet</h4>
+                <p class="sora-font ">3 items</p>
+             </div>
+              <!-- child-6 -->
+              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+                <!-- img-holder -->
+                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                   <img src="c1-assets/rabbit-cartoon.png" alt=""> </div>
+                <h4 class="mb-3  text-xl">Rabit</h4>
+                <p class="sora-font ">3 items</p>
+             </div>
+
+           </div>
+       </section>
 
     </main>
     <!--footer-->
