--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- banner -->
          <div class="max-w-7xl mx-auto relative mt-20 px-4 lg:px-0">
            <div class="lg:absolute space-y-6">
-                <h1 class="text-6xl ">Pamper Your Pet,<br> Because They Deserve <br> the Bes</h1>
+                <h1 class="text-4xl lg:text-6xl ">Pamper Your Pet,<br> Because They Deserve <br> the Bes</h1>
                 <p class="sora-font text-xl text-gray-500">Discover a world of treats, toys, and essentials handpicked for <br> your furry friends. Shop now and make tails wag with joy!</p>
                 <a class="sora-font btn btn-warning">Find a pet</a>
                </div>
@@ -94,12 +94,12 @@
     <main class="space-y-32">
       <!-- Browse By Catagories -->
        <section class="max-w-7xl mx-auto px-4 lg:px-0">
-          <h1 class="text-4xl mb-10">Browse By Catagories</h1>
+          <h1 class="text-3xl lg:text-4xl mb-10">Browse By Catagories</h1>
           <!-- parent -->
 
            <div class="grid grid-cols-2 lg:grid-cols-6 gap-3 lg:gap-6 ">
              <!-- child-1 -->
-              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+              <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                  <!-- img-holder -->
                   <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                     <img src="c1-assets/dog-cartoon.png" alt=""> </div>
@@ -107,7 +107,7 @@
                  <p class="sora-font ">3 items</p>
               </div>
               <!-- child-2 -->
-              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+              <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
                  <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/fish-cartoon.png" alt=""> </div>
@@ -115,7 +115,7 @@
                 <p class="sora-font ">3 items</p>
              </div>
               <!-- child-3 -->
-              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+              <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
                  <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/cat-cartoon.png" alt=""> </div>
@@ -123,7 +123,7 @@
                 <p class="sora-font ">3 items</p>
              </div>
               <!-- child-4 -->
-              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+              <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
                  <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/bird-cartoon.png" alt=""> </div>
@@ -131,7 +131,7 @@
                 <p class="sora-font ">3 items</p>
              </div>
               <!-- child-5 -->
-              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+              <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
                  <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/mouse-cartoon.png" alt=""> </div>
@@ -139,7 +139,7 @@
                 <p class="sora-font ">3 items</p>
              </div>
               <!-- child-6 -->
-              <div class="bg-card-bg text-center py-8 px-12 rounded-xl">
+              <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
                  <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/rabbit-cartoon.png" alt=""> </div>
@@ -149,6 +149,123 @@
 
            </div>
        </section>
+       <!-- trending products -->
+        <section class="bg-nav-bg ">
+          <!-- container -->
+           <div class="max-w-7xl mx-auto px-4 lg:px-0 pt-10 lg:py-32">
+             <h1 class="mb-9 text-3xl lg:text-4xl">Trending Pet Products</h1>
+             <!-- card-container -->
+              <div class="flex flex-col lg:flex-row gap-6">
+                <!-- card -->
+                 <div class="bg-card-bg rounded-xl relative pt-12 pb-44 lg:pb-36 pl-8 w-[100%] lg:w-2/6 ">
+                  <div class="  space-y-5 relative">
+                      <h3 class="text-3xl">T-Shirt For Dogs</h3>
+                      <p class="text-base text-gray-500 sora-font">Discover a world of treats,toys,and <br>essentials handpicked for</p>
+                      <button class="btn font-normal">Shop Now</button>
+                    </div>
+                    <img class="absolute right-0 bottom-0" src="c1-assets/cute-pet-small.png" alt="">
+                 </div>
+
+                 <!-- cards -->
+                  <div class="grid grid-cols-2 lg:grid-cols-3 gap-3 lg:gap-6">
+                       <!-- one -->
+                        
+                       <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                         <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                          <img src="c1-assets/dog-cartoon.png" alt=""></div>
+                         <div>
+                          <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                          <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                          <p class="text-sm lg:text-base font-medium">$39.99</p>
+                         </div>
+                       </div>
+                       
+                      <!-- tow -->
+                      <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                        <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                         <img src="c1-assets/fish-cartoon.png" alt=""></div>
+                        <div>
+                         <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                         <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                         <p class="text-sm lg:text-base font-medium">$39.99</p>
+                        </div>
+                      </div>
+                      <!-- three -->
+                      <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                        <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                         <img src="c1-assets/bird-cartoon.png" alt=""></div>
+                        <div>
+                         <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                         <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                         <p class="text-sm lg:text-base font-medium">$39.99</p>
+                        </div>
+                      </div>
+                      <!-- four -->
+                      <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                        <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                         <img src="c1-assets/rabbit-cartoon.png" alt=""></div>
+                        <div>
+                         <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                         <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                         <p class="text-sm lg:text-base font-medium">$39.99</p>
+                        </div>
+                      </div>
+                      <!-- five -->
+                      <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                        <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                         <img src="c1-assets/bird-cartoon.png" alt=""></div>
+                        <div>
+                         <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                         <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                         <p class="text-sm lg:text-base font-medium">$39.99</p>
+                        </div>
+                      </div>
+                      <!-- six -->
+                      <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                        <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                         <img src="c1-assets/pet-couch.png" alt=""></div>
+                        <div>
+                         <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                         <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                         <p class="text-sm lg:text-base font-medium">$39.99</p>
+                        </div>
+                      </div>
+                      <!-- seven -->
+                      <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                        <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                         <img src="c1-assets/fish-cartoon.png" alt=""></div>
+                        <div>
+                         <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                         <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                         <p class="text-sm lg:text-base font-medium">$39.99</p>
+                        </div>
+                      </div>
+                     <!-- eight-->
+                     <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl">
+                      <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                       <img src="c1-assets/pet-couch.png" alt=""></div>
+                      <div>
+                       <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                       <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                       <p class="text-sm lg:text-base font-medium">$39.99</p>
+                      </div>
+                    </div>
+                      <!-- nine -->
+                      <div class="flex gap-x-4 items-center bg-white py-2 lg:py-4 pl-4 pr-7 lg:pr-20 border border-slate-200 rounded-xl invisible lg:visible">
+                        <div class="w-86 h-86 rounded-xl bg-nav-bg p-2 lg:p-5">
+                         <img src="c1-assets/rabbit-cartoon.png" alt=""></div>
+                        <div>
+                         <p class="text-sm lg:text-base font-medium" ><i class="fa-solid fa-star text-amber-500"></i>  4.5</p>
+                         <h4 class="sora-font text-sm lg:text-base font-bold">Pet Bed</h4>
+                         <p class="text-sm lg:text-base font-medium">$39.99</p>
+                        </div>
+                      </div>
+
+                  </div>
+              </div>
+
+           </div>
+        </section>
 
     </main>
     <!--footer-->
