--- a/index.html
+++ b/index.html
@@ -66,18 +66,7 @@
               <i class="fa-solid fa-magnifying-glass invisible lg:visible"></i>
               <a class="btn btn-outline btn-warning invisible lg:visible">Login</a>
               <a class="btn btn-warning invisible lg:visible">Register</a> 
-              <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5 lg:hidden "
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor">
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M4 6h16M4 12h8m-8 6h16" />
-            </svg>
+              <i class="fa-solid fa-bars lg:hidden"></i>
               </div>
             </div>
 
@@ -89,7 +78,7 @@
            <div class="lg:absolute space-y-6">
                 <h1 class="text-4xl lg:text-6xl ">Pamper Your Pet,<br> Because They Deserve <br> the Bes</h1>
                 <p class="sora-font text-xl text-gray-500">Discover a world of treats, toys, and essentials handpicked for <br> your furry friends. Shop now and make tails wag with joy!</p>
-                <a class="sora-font btn btn-warning animate-bounce"> Find a pet</a>
+                <a class="sora-font btn btn-warning animate-bounce "> Find a pet</a>
                </div>
                <img class="" src="c1-assets/cat-big.png" alt="">
          </div> 
@@ -136,8 +125,6 @@
       </div>
       
 
-
-
       <!-- Browse By Catagories -->
        <section class="max-w-7xl mx-auto px-4 lg:px-0">
           <h1 class="text-3xl lg:text-4xl mb-10">Browse By Catagories</h1>
@@ -147,7 +134,7 @@
              <!-- child-1 -->
               <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                  <!-- img-holder -->
-                  <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                  <div class="w-[96px] h-[96px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                     <img src="c1-assets/dog-cartoon.png" alt=""> </div>
                  <h4 class="mb-3  text-xl">Dog</h4>
                  <p class="sora-font ">3 items</p>
@@ -155,7 +142,7 @@
               <!-- child-2 -->
               <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
-                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                <div class="w-[96px] h-[96px]  rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/fish-cartoon.png" alt=""> </div>
                 <h4 class="mb-3  text-xl">Fish</h4>
                 <p class="sora-font ">3 items</p>
@@ -163,7 +150,7 @@
               <!-- child-3 -->
               <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
-                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                 <div class="w-[96px] h-[96px]  rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/cat-cartoon.png" alt=""> </div>
                 <h4 class="mb-3  text-xl">Cat</h4>
                 <p class="sora-font ">3 items</p>
@@ -171,7 +158,7 @@
               <!-- child-4 -->
               <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
-                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                 <div class="w-[96px] h-[96px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/bird-cartoon.png" alt=""> </div>
                 <h4 class="mb-3  text-xl">Birds</h4>
                 <p class="sora-font ">3 items</p>
@@ -179,7 +166,7 @@
               <!-- child-5 -->
               <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
-                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                 <div class="w-[96px] h-[96px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/mouse-cartoon.png" alt=""> </div>
                 <h4 class="mb-3  text-xl">Small pet</h4>
                 <p class="sora-font ">3 items</p>
@@ -187,7 +174,7 @@
               <!-- child-6 -->
               <div class="bg-card-bg text-center py-8 lg:px-12 rounded-xl">
                 <!-- img-holder -->
-                 <div class="w-[104px] h-[104px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
+                 <div class="w-[96px] h-[96px] rounded-full p-7 bg-white mb-6 inline-flex justify-center">
                    <img src="c1-assets/rabbit-cartoon.png" alt=""> </div>
                 <h4 class="mb-3  text-xl">Rabit</h4>
                 <p class="sora-font ">3 items</p>
