--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
     </header>
     <!--main-->
     <main class="space-y-8 lg:space-y-32">
-      <!-- /*container*/ -->
-      <div class="max-w-7xl mx-auto px-4 lg:px-0">
-        <h1 class="text-3xl lg:text-4xl mb-20">Fitured Catagories</h1>
-        <!-- /*avetar*/ -->
+      <!--challenge- container-->
+      <div class="max-w-7xl mx-auto px-4 lg:px-0 bg-nav-bg lg:bg-white py-4 rounded-xl">
+        <h1 class="text-3xl lg:text-4xl mb-20 ">Featured Catagories</h1>
+        <!--avetar -->
 
-        <div class="avatar-group lg:-space-x-2 grid grid-cols-2 lg:grid-cols-4 ">
+        <div class="avatar-group space-x-4 lg:-space-x-2 grid grid-cols-2 lg:grid-cols-4 ">
         
           <div class="mb-10 lg:mb-0">
             <div class="avatar">
@@ -124,7 +124,6 @@
         </div>
       </div>
       
-
       <!-- Browse By Catagories -->
        <section class="max-w-7xl mx-auto px-4 lg:px-0">
           <h1 class="text-3xl lg:text-4xl mb-10">Browse By Catagories</h1>
